--- a/src/index.html
+++ b/src/index.html
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
- 	<meta charset='UTF-8'>
-    <link rel = 'stylesheet' href = 'saisie.css'>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT35vjYyv4H4qkz0n93vzOS9Pp1hKthQY">
-    </script>
-    <script src="./js/test.js"></script>
-  </head>
-  <body>
-    
+        <head>
+                <meta charset='UTF-8'>
+                <link rel="stylesheet"
+                        href="./css/style.css">
 
-    <div id = 'titre'>
-    	<p>Complétez tous les champs avec les éléments de votre stage</p>
-    </div>
+                <title>Gestion des stages au même endroit</title>
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBT35vjYyv4H4qkz0n93vzOS9Pp1hKthQY"></script>
+                <script src="./js/init.js"></script>
+        </head>
 
 
-    <form method = 'get'>
-    	<fieldset>
-    		<legend>Maître de stage</legend>
-    		Nom : <input type='text' name='maitre_nom'/> <br>
-    		Prénom : <input type='text' name='maitre_prenom'/> <br>
-    		Mail : <input type='text' name='maitre_mail'/> <br>
-    	</fieldset>
-
-    	<fieldset>
-    		<legend>Etudiant</legend>
-    		Nom : <input type='text' name='etudiant_nom'/> <br>
-    		Prénom : <input type='text' name='etudiant_prenom'/> <br>
-    		Mail : <input type='text' name='etudiant_mail'/>  <br>
-    	</fieldset>
-
-    	<fieldset>
-    		<legend>Stage</legend>
-    		Titre en anglais : <input type='text' name='titre_anglais'/>  <br>
-    		Titre en français : <input type='text' name='titre_français'/>  <br>
-    		Résumé en anglais : <input type='text' name='resume_anglais'/>   <br>
-    		Résumé en français : <input type='text' name='resume_français'/>  <br>
-    		Année : <input type='text' name='annee'/>
-    	</fieldset>
-
-        <input type="submit" id="submitBtn" value="valider">
-    </form>
-
-	<div id="map" style='height: 100px'></div>
-
-    <div id='lieuxProches'></div>
+        <body>
+                <div id = 'titre'>
+                        <p>Complétez tous les champs avec les éléments de votre stage</p>
+                </div>
 
 
-  </body>
+                <form method = 'get'>
+                    	<fieldset id="infosMaitre">
+                        	<legend>Maître de stage</legend>
+                        	<p>Nom : <input type='text' name='maitre_nom'></p>
+                        	<p>Prénom : <input type='text' name='maitre_prenom'></p>
+                        	<p>Mail : <input type='text' name='maitre_mail'></p>
+                    	</fieldset>
+
+                    	<fieldset id="infosEtudiant">
+                		<legend>Etudiant</legend>
+                		<p>Nom : <input type='text' name='etudiant_nom'></p>
+                		<p>Prénom : <input type='text' name='etudiant_prenom'></p>
+                		<p>Mail : <input type='text' name='etudiant_mail'></p>
+                    	</fieldset>
+
+                    	<fieldset id="infosStage">
+                		<legend>Stage</legend>
+                		<p>Titre en anglais : <input type='text' name='titre_anglais'></p>
+                		<p>Titre en français : <input type='text' name='titre_français'></p>
+                		<p>Résumé en anglais : <input type='text' name='resume_anglais'></p>
+                		<p>Résumé en français : <input type='text' name='resume_français'></p>
+                		<p>Année : <input type='text' name='annee'/>
+                    	</fieldset>
+
+
+                	    <div id="map"></div>
+                        <input type="submit" id="submitBtn" value="valider">
+                </form>
+
+
+                <div id='lieuxProches'></div>
+
+
+        </body>
+
 </html>
