ajout du cas où aucun lieu proposé n'est le bon

--- a/src/index.html
+++ b/src/index.html
@@ -20,25 +20,26 @@
                 <form method = 'get'>
                     	<fieldset id="infosMaitre">
                         	<legend>Maître de stage</legend>
-                        	<p>Nom : <input type='text' name='maitre_nom'></p>
-                        	<p>Prénom : <input type='text' name='maitre_prenom'></p>
-                        	<p>Mail : <input type='text' name='maitre_mail'></p>
+                        	<p>Nom : <input type='text' id='maitre_nom'></p>
+                        	<p>Prénom : <input type='text' id='maitre_prenom'></p>
+                        	<p>Mail : <input type='text' id='maitre_mail'></p>
                     	</fieldset>
 
                     	<fieldset id="infosEtudiant">
                 		<legend>Etudiant</legend>
-                		<p>Nom : <input type='text' name='etudiant_nom'></p>
-                		<p>Prénom : <input type='text' name='etudiant_prenom'></p>
-                		<p>Mail : <input type='text' name='etudiant_mail'></p>
+                		<p>Nom : <input type='text' id='etudiant_nom'></p>
+                		<p>Prénom : <input type='text' id='etudiant_prenom'></p>
+                		<p>Mail : <input type='text' id='etudiant_mail'></p>
                     	</fieldset>
 
                     	<fieldset id="infosStage">
                 		<legend>Stage</legend>
-                		<p>Titre en anglais : <input type='text' name='titre_anglais'></p>
-                		<p>Titre en français : <input type='text' name='titre_français'></p>
-                		<p>Résumé en anglais : <input type='text' name='resume_anglais'></p>
-                		<p>Résumé en français : <input type='text' name='resume_français'></p>
-                		<p>Année : <input type='text' name='annee'/>
+                		<p>Titre en anglais : <input type='text' id='titre_anglais'></p>
+                		<p>Titre en français : <input type='text' id='titre_français'></p>
+                		<p>Résumé en anglais : <input type='text' id='resume_anglais'></p>
+                		<p>Résumé en français : <input type='text' id='resume_français'></p>
+                		<p>Année : <input type='number' id='annee'></p>
+                                <p>Lieu du stage : <input type='text' id='lieu'></p>
                     	</fieldset>
 
 
