--- a/src/index.html
+++ b/src/index.html
@@ -17,20 +17,22 @@
                 </div>
 
 
-                <form method = 'get'>
-                    	<fieldset id="infosMaitre">
-                        	<legend>Maître de stage</legend>
-                        	<p>Nom : <input type='text' id='maitre_nom'></p>
-                        	<p>Prénom : <input type='text' id='maitre_prenom'></p>
-                        	<p>Mail : <input type='text' id='maitre_mail'></p>
-                    	</fieldset>
+                <form>
+                        <div id="textes">
+                            	<fieldset id="infosMaitre">
+                                	<legend>Maître de stage</legend>
+                                	<p>Nom : <input type='text' id='maitre_nom'></p>
+                                	<p>Prénom : <input type='text' id='maitre_prenom'></p>
+                                	<p>Mail : <input type='text' id='maitre_mail'></p>
+                            	</fieldset>
 
-                    	<fieldset id="infosEtudiant">
-                		<legend>Etudiant</legend>
-                		<p>Nom : <input type='text' id='etudiant_nom'></p>
-                		<p>Prénom : <input type='text' id='etudiant_prenom'></p>
-                		<p>Mail : <input type='text' id='etudiant_mail'></p>
-                    	</fieldset>
+                            	<fieldset id="infosEtudiant">
+                        		<legend>Etudiant</legend>
+                        		<p>Nom : <input type='text' id='etudiant_nom'></p>
+                        		<p>Prénom : <input type='text' id='etudiant_prenom'></p>
+                        		<p>Mail : <input type='text' id='etudiant_mail'></p>
+                            	</fieldset>
+                        </div>
 
                     	<fieldset id="infosStage">
                 		<legend>Stage</legend>
