--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                 		<p>Titre en français : <input type='text' id='titre_français'></p>
                 		<p>Résumé en anglais : <input type='text' id='resume_anglais'></p>
                 		<p>Résumé en français : <input type='text' id='resume_français'></p>
-                		<p>Année : <input type='number' id='annee'></p>
+                		<p>Année : <input type='number' id='annee' value='2010'></p>
                                 <p>Lieu du stage : <input type='text' id='lieu'></p>
                     	</fieldset>
 
