résumé en textarea

--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,8 @@
                 		<legend>Stage</legend>
                 		<p>Titre en anglais : <input required type='text' id='titre_anglais'></p>
                 		<p>Titre en français : <input required type='text' id='titre_français'></p>
-                		<p>Résumé en anglais : <input required type='textArea' id='resume_anglais'></p>
-                		<p>Résumé en français : <input required type='textArea' id='resume_français'></p>
+                		<p>Résumé en anglais : <textarea id='resume_anglais' form="formStage"></textarea></p>
+                		<p>Résumé en français : <textarea  id='resume_français' form="formStage"></textarea></p>
                 		<p>Année : <input required type='number' id='annee' value='2010'></p>
                         <p>Lieu du stage : <input required type='text' id='lieu'></p>
                     	</fieldset>
